[package]
name = "kern-bootstrap"
version = "1.0.18"
edition = "2021"
license = "GPL-3.0"
description = "Production bootstrapper for Kern + Kargo from GitHub Releases"
repository = "https://github.com/entrenchedosx/kern"

[[bin]]
name = "kern-bootstrap"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5.0"
flate2 = "1.0"
fs4 = "0.12"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
thiserror = "1.0"
zip = "0.6"

[target.'cfg(windows)'.dependencies]
junction = "1.2"
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = true
